Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/Urbanizacion__c.object-meta.xml
<CustomObject>
    <label>Etapa</label>
    <nameField>
        <label>Nombre de la Etapa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etapas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>