Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/fields/CI_Codigo_Etapa__c.field-meta.xml
<CustomField>
    <fullName>CI_Codigo_Etapa__c</fullName>
    <label>Código de Etapa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>