Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/fields/ParametroConfigurados__c.field-meta.xml
<CustomField>
    <fullName>ParametroConfigurados__c</fullName>
    <label>Parámetro Configurados</label>
    <summaryForeignKey>CI_ParametroEtapa__c.CI_Etapa__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>