Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/fields/PlazoEntradaConstruccion__c.field-meta.xml
<CustomField>
    <fullName>PlazoEntradaConstruccion__c</fullName>
    <label>Plazo Entrada Construcción</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>