Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/fields/PlazoEntradaConstruir__c.field-meta.xml
<CustomField>
    <fullName>PlazoEntradaConstruir__c</fullName>
    <label>Plazo Entrada por Construir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>