Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/fields/PlazoEntregaConstruccion__c.field-meta.xml
<CustomField>
    <fullName>PlazoEntregaConstruccion__c</fullName>
    <label>Plazo Entrega Construcción</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>