Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/fields/PlazoEntregaConstruir__c.field-meta.xml
<CustomField>
    <fullName>PlazoEntregaConstruir__c</fullName>
    <label>PlazoEntrega por Construir</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>