Inmob-Salesforce/force-app/main/default/objects/Urbanizacion__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CI_Codigo_Etapa__c</columns>
    <columns>NAME</columns>
    <columns>Proyecto__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>